# stock-market

./: .gitignore  .~lock.Stock_Prediction_System_Overview.docx#  CHANGELOG.md  README.md  test_endpoints.sh  test_new_features.sh
backend/: .gitignore  alembic.ini  check_schema_details.py  generate_nse_sample_data.py  migration_verification_report.md  nse_lstm_trainer.py  populate_nse_data.py  pyproject.toml  run_server.py  test_data_service_multi_market.py  test_wave1.py  test_wave2.py  test_wave3.py  test_wave4.py  test_wave5_integration.py  verify_migration.py
backend/alembic/: env.py
backend/alembic/versions/: ab64e6ee03b7_initial_schema.py  d21a5db05206_add_nse_market_support.py  fbe5aacfe4f8_nse_only_defaults.py
backend/app/: main.py  server.py
backend/app/agent/: agent.py
backend/app/config/: config.py  database.py  kenyan_financial_lexicon.py  kenyan_news_sources.yaml  news_source_config.py  nse_holidays.yaml  security.py
backend/app/models/: __init__.py  market.py  news.py  ohlcv.py  prediction.py  sentiment.py  stock.py  user.py
backend/app/nodes/: aggregation_node.py  analysis_node.py  base_node.py  data_collection_node.py  output_node.py  pipeline.py  prediction_node.py  preprocessing_node.py
backend/app/services/: auth_service.py  azure_ml_client.py  backfill_service.py  data_quality_validator.py  data_service.py  email_service.py  scheduler.py  (+13 more)
backend/config/: kenyan_news_sources.yaml
backend/docs/: implementation.md  python-backend-guide-part2.md  python-backend-guide.md
backend/tests/: __init__.py  news-api.py  test_models_market.py
(+142 files in other folders)
