[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.5",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt==4.0.1",
    "click>=8.3.1",
    "joblib>=1.5.3",
    "loguru>=0.7.3",
    "numpy>=2.4.4",
    "openai>=2.30.0",
    "pandas>=3.0.2",
    "passlib[bcrypt]>=1.7.4",
    "pdfminer-six>=20260107",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "python-jose[cryptography]>=3.5.0",
    "requests>=2.33.1",
    "schedule>=1.2.2",
    "scikit-learn>=1.8.0",
    "sqlmodel>=0.0.37",
    "tensorflow>=2.21.0",
    "textblob>=0.19.0",
    "vadersentiment>=3.3.2",
    "yfinance>=1.2.0",
]

[dependency-groups]
dev = [
    "hypothesis>=6.151.10",
    "pytest>=9.0.2",
]
